--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -3,14 +3,18 @@
 </h2>
 
 <div class="right">
+    {{ productsNumber$ | async }} products
+    <span *ngIf="filtered$ | async">(filtered)</span>
+     /
+
     {favourites, plural,
     =0 {no favourite}
     =1 {1 favourite}
     other {{{favourites}} favourites}
     }
 </div>
-<div> 
-    <!-- Search: <input type="text" [formControl]="filter" placeholder="filter by name"> -->
+<div>
+    Search: <input type="text" [formControl]="filter" placeholder="filter by name">
     &nbsp;
 </div>
 
@@ -18,7 +22,7 @@
     <h2 class="loading">Loading products</h2>
 </ng-template>
 
-<ul class="products" *ngIf="products$ | async as products;else loading">
+<ul class="products" *ngIf="filteredProducts$ | async as products;else loading">
     <li *ngFor="let product of products | slice:start:end"
         (click)="onSelect(product)"
         [class.discontinued]="product.discontinued"
@@ -41,7 +45,8 @@
         < Previous Page
     </button>
     Page {{ currentPage }}
-    <button (click)="nextPage()">
+    <button (click)="nextPage()"
+            [disabled]="(productsNumber$ | async) <= end">
         Next Page >
     </button>
 </div>
