--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -2,6 +2,10 @@
     {{ title }}
 </h2>
 
+<h2 *ngIf="newFavourite$ | async as favouriteProduct">
+    Product {{ favouriteProduct.name }} added to your favourites!
+</h2>
+
 <div class="right">
     {{ productsNumber$ | async }} products
     <span *ngIf="filtered$ | async">(filtered)</span>
@@ -18,11 +22,7 @@
     &nbsp;
 </div>
 
-<ng-template #loading>
-    <h2 class="loading">Loading products</h2>
-</ng-template>
-
-<ul class="products" *ngIf="filteredProducts$ | async as products;else loading">
+<ul class="products" *ngIf="filteredProducts$ | async as products">
     <li *ngFor="let product of products | slice:start:end"
         (click)="onSelect(product)"
         [class.discontinued]="product.discontinued"
